[package]
name = "git-changelog"
version = "0.1.0"
authors = ["Claudio Giovanni Mattera <dev@claudiomattera.it>"]
edition = "2018"
description = "Generate changelog from git commit tree"
readme = "Readme.md"
homepage = "https://gitlab.com/claudiomattera/git-changelog"
repository = "https://gitlab.com/claudiomattera/git-changelog"
license = "MPL-2.0"
keywords = [
    "git",
    "changelog",
]
categories = [
    "command-line-utilities",
]
publish = false

[dependencies]
anyhow = "1"
git2 = "0.13"
structopt = "0.3"
semver = "1"
chrono = "0.4"
regex = "1"
markdown-composer = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-log = "0.1"
